--- a/about.html
+++ b/about.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>About Us</title>
+    <title>About</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
- <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="">IG</a></li>
-        </ul>
-    </nav>
-    
-    <footer>
-    <nav>
-        <ul>
-            <li><a href="" class="active">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="#body">Back to Top</a></li>
-        </ul>
-    </nav>
-    <div class="copyright">
-        <p>COPYRIGHT:2019</p>
+    <ul>
+        <li><a href="index.html"><img src="img/logo.jpeg" alt=""></a></li>
+        <li ><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="work.html">Gallery</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+    <header>
+        <div id="home" class="about_banner">
+            <div class="content">
+                
+                <p>Experience Creative passion</p>
+				<p>---Create Inpossable</p>
+                <a href="work.html"></a>
+            </div>
+        </div>
+
+
+    </header>
+	
+	<main>
+	<div class="about">          
+            <div class="info">
+                <h3>Interactive Media Design</h3>
+                <h4>Address: Nepean, ON k2g 4h4</h4>
+                <h4>Email: shianneliu@gmail.com</h4>
+                <h4>Tel: 613-9810118</h4>
+                <p>Skills: UI & UX, CMS, HTML, CSS, JS, Photo Editor, Interior Decorator, Staging.</p>
+            </div>
     </div>
+	
+	
+	</main>
+	 <footer>
+        <p>&copy; Copyrights <a href="mailto:liu00401@algonquinlive.com">Liu</a> ~ 2019</p>
     </footer>
+    <script src="js/main.js"></script>
 </body>
+
 </html>
