--- a/index.html
+++ b/index.html
@@ -1,88 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>CRW Flags</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="image.css">
+	<meta charset="UTF-8">
+	<title>Homepage</title>
+	<link rel="stylesheet" href="css/main.css">
 </head>
-<body id="body">
-    <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="">IG</a></li>
-        </ul>
-    </nav>
-    <header>
-        <div class="bgImg">
-            <img src="" alt="" class="logo">
-        </div>
-        <div class="webIntro">
-            <h1>Flags On Everywhere</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, rem, odit. Illum iusto dolor deserunt neque. Repellat consectetur quibusdam unde quia ducimus debitis deleniti possimus vero, sunt, non iste, totam!</p>
-        </div>
-    </header>
-    <main>
-<!--       card section-->
-        <section class="cards">
-<!--       first card-->
-        <div class="card">
-            <h3>Flags</h3>
-            <div class="img flag1"></div>
-            <div class="intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, obcaecati.</div>
-        </div>
-<!--        second card-->
-        <div class="card">
-            <h3>Flags</h3>
-            <div class="img flag2"></div>
-            <div class="intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, repellat!</div>
-        </div>
-<!--        third card-->
-        <div class="card">
-            <h3>Flags</h3>
-            <div class="img flag3"></div>
-            <div class="intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, dolore.</div>
-        </div>
-    </section>
-<!--    service section-->
-    <section class="service">
-        <div class="title">
-            <h2>To Buy, To Serve, To Custom</h2>
-        </div>
-        <div class="infoArea">
-            <div class="info">
-                <h3>Relations</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, voluptate.</p>
-            </div>
-            <div class="info">
-                <h3>Corporation</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, facilis!</p>
-            </div>
-            <div class="info">
-                <h3>Contact Us</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, consequuntur.</p>
-            </div>
-            <div class="info">
-                <h3>Policy</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis, quidem.</p>
-            </div>
-        </div>
-    </section>
-    </main>
-    <footer>
-    <nav>
-        <ul>
-            <li><a href="" class="active">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="#body">Back to Top</a></li>
-        </ul>
-    </nav>
-    <div class="copyright">
-        <p>COPYRIGHT:2019</p>
-    </div>
-    </footer>
-</body>
-</html>
+
+<body>
+	<ul>
+		<li><a href="index.html"><img src="img/logo.jpeg" alt=""></a></li>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="about.html">About</a></li>
+		<li><a href="work.html">Gallery</a></li>
+		<li><a href="contact.html">Contact</a></li>
+	</ul>
+	<header>
+		<div id="home" class="banner">
+			<div class="content">
+				<h1>Create it</h1>
+				<p>Shianne Liu</p>
+				<p>---UI/UX/Graphic Designer</p>
+				<a href="work.html"><button>See Portfolio</button></a>
+			</div>
+		</div>
+
+
+	</header>
+
+	<section>
+		<div class="card"><img src="img/web-icon.jpeg" alt="Card1">
+			<h3>UI/UX Web Design</h3>
+			<p>Build website and start growing business. Affordable and Flexible Website Packages, make your own </p>
+		</div>
+		<div class="card"><img src="img/photo-icon.svg" alt="Card2">
+			<h3>Pictures</h3>
+			<p>Better photos, videos design, and social media posts to the next level with filters, touch up tools, and graphics.</p>
+		</div>
+		<div class="card"><img src="img/video-icon.png" alt="Card3">
+			<h3>Videos</h3>
+			<p>Express everything you want to ecpress with icons!</p>
+		</div>
+	</section>
+	<div id="work">
+		<h2>Work Gallery</h2>
+		<div class="grid">
+			<div class="imgCard"><span>
+					<p>Pictures</p>
+					<h5>School Parking</h5>
+				</span><img src="img/parking.jpeg" alt="image"></div>
+			<div class="imgCard"><span>
+					<p>Pictures</p>
+					<h5>School</h5>
+				</span><img src="img/g-school.jpeg" alt="image"></div>
+			<div class="imgCard"><span>
+					<p>Videos</p>
+					<h5>Vehicles Car</h5>
+				</span><img src="img/car.jpeg" alt="image"></div>
+			<div class="imgCard"><span>
+					<p>Vidoes</p>
+					<h5>chocolate</h5>
+				</span><img src="img/lindal.jpeg" alt="image"></div>
+			<div class="imgCard"><span>
+					<p>Gif</p>
+					<h5>Animals Fish</h5>
+				</span><img src="img/fish.jpeg" alt="image"></div>
+			<div class="imgCard"><span>
+					<p>Web design</p>
+					<h5>Restaurant</h5>
+				</span><img src="img/g-restau.jpeg" alt="image"></div>
+			<div class="imgCard"><span>
+					<p>Vector</p>
+					<h5>Small</h5>
+				</span><img src="img/elien.jpeg" alt="image"></div>
+			<div class="imgCard"><span>
+					<p>XD Fils</p>
+					<h5>Web Prototype</h5>
+				</span><img src="img/studio.jpeg" alt="image"></div>
+		</div>
+		<div class="more"><a href="work.html">Load More</a></div>
+	</div>
+	<div id="about">
+		<h2>About Me</h2>
+		<div>
+			<div class="photo"><img src="img/personal1.png" alt="My Image"></div>
+			<div class="info">
+				<h3>Interactive Media Design</h3>
+				<h4>Address: Nepean, ON k2g 4h4</h4>
+				<h4>Email: shianneliu@gmail.com</h4>
+				<h4>Tel: 613-9810118</h4>
+				<p>Skills: UI & UX, CMS, HTML, CSS, JS</p>
+			</div>
+		</div>
+	</div>
+	<div id="contact">
+		<h2>Contact Me</h2>
+		<form>
+			<input type="text" required placeholder="Enter your Name here...">
+			<input type="email" required placeholder="Enter your Email here...">
+			<Textarea placeholder="Message goes here......" required></Textarea>
+			<input type="submit" value="Send">
+		</form>
+	</div>
+	<footer>
+		<p>&copy; Copyrights <a href="mailto:liu00401@algonquinlive.com">Liu</a> ~ 2019</p>
+	</footer>
+	<script src="js/main.js"></script>
+</body></html>
